--- a/src/Components/TicTacToe/TicTacToe.css
+++ b/src/Components/TicTacToe/TicTacToe.css
@@ -29,3 +29,20 @@
     margin-top: 25px;
     margin-bottom: 50px;   
 }
+
+.boxes {
+    display: flex;
+    width: 180px;
+    height: 180px;
+    background: #1f3540;
+    border: 4px solid #0f1b21;
+    border-radius: 12px;
+    cursor: pointer;
+}
+
+.board {
+    height: 600px;
+    width: 564px;
+    display: flex;
+    margin: auto;
+}
