--- a/src/Components/TicTacToe/TicTacToe.css
+++ b/src/Components/TicTacToe/TicTacToe.css
@@ -1,6 +1,7 @@
-.container {
-    text-align: center;
+h1 {
+  text-align: center;
 }
+/* }
 
 .title {
     margin-top: 50px;
@@ -54,4 +55,4 @@
 .title img {
     padding: 20px 20px;
     height: 50px;
-}
+} */
