--- a/src/Components/Board/Board.css
+++ b/src/Components/Board/Board.css
@@ -5,3 +5,10 @@
   margin: auto;
   position: relative;
 }
+
+.row {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
